--- a/11.11-git/index.html
+++ b/11.11-git/index.html
@@ -1,9 +1,18 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My first commit to github</title>
 </head>
-<body onload="">
-    <h1>NEED TO CHANGE THIS IN THE FIRST COMMIT.</h1>
+
+<body>
+
+    <h1> Yes i did it!!! Text changed! </h1>
     <div data-role="contacts-container">NEED TO CHANGE THIS IN THE SECOND COMMIT.</div>
+
 </body>
 
 </html>
