--- a/11.11-git/index.html
+++ b/11.11-git/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <h1> Yes i did it!!! Text changed! </h1>
-    <div data-role="contacts-container">NEED TO CHANGE THIS IN THE SECOND COMMIT.</div>
+    <div data-role="contacts-container">oops i did it again!!! </div>
 
 </body>
 
